set up base header component + helpers

--- a/src/assets/sass/base/_variables.scss
+++ b/src/assets/sass/base/_variables.scss
@@ -1,9 +1,10 @@
 /* Breakpoints */
-$phone-breakpoint   : 30rem;  // 480px
+$phone-breakpoint   : 36rem;  // 576px
 $tablet-breakpoint  : 48rem;  // 768px
-$laptop-breakpoint  : 60rem;  // 960px
+$laptop-breakpoint  : 62rem;  // 992px
 $desktop-breakpoint : 75rem;  // 1200px
 
 /* Globals */
 $global-font-size: 1rem;
 $body-font-size: 0.875rem;
+$container-gutter: 1rem;
