--- a/src/assets/sass/utils/_helpers.scss
+++ b/src/assets/sass/utils/_helpers.scss
@@ -1,4 +1,28 @@
 /* Utilities */
+.container {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    @include spacing(margin, left right, auto);
+    @include spacing(padding, left right, $container-gutter);
+
+    @media screen and (min-width: $phone-breakpoint){
+        max-width: calc(33.75rem + (#{$container-gutter} * 2));
+    }
+
+    @media screen and (min-width: $tablet-breakpoint){
+        max-width: calc(45rem + (#{$container-gutter} * 2));
+    }
+
+    @media screen and (min-width: $laptop-breakpoint){
+        max-width: calc(60rem + (#{$container-gutter} * 2));
+    }
+
+    @media screen and (min-width: $desktop-breakpoint){
+        max-width: calc(71.25rem + (#{$container-gutter} * 2));
+    }
+}
+
 .no-padding {
     padding: 0 !important;
 }
