--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -1,7 +1,10 @@
 header {
+    @include spacing(padding, top bottom, 1.75rem);
+
     .logo {
         display: block;
         width: 100%;
         max-width: 9.25rem;
+        max-height: 3.125rem;
     }
 }
