restructured project with proper setup

--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -12,7 +12,7 @@
 'base/fonts',
 'base/variables';
 
-//Helper Styles
+//Helpers
 @import
 'utils/mixins',
 'utils/helpers';
@@ -22,8 +22,8 @@
 'modules/typography',
 'modules/buttons';
 
-//Component Styles
+//Components
 @import
 'components/header';
 
-//Pages Styles
+//Pages
