updated base styles + set up header menu button

--- a/src/assets/sass/base/_colors.scss
+++ b/src/assets/sass/base/_colors.scss
@@ -1,5 +1,7 @@
 /* Colours */
 $white: #FFFFFF;
+$black: #000000;
+
 $light-grey: #EBEFF1;
 $grey: #BECBD1;
 $ocean-blue: #083242;
@@ -12,3 +14,5 @@ $orange: #F08432;
 $yellow: #FFCD00;
 $sky-blue: #00A3FF;
 $throwback-blue: #3500F5;
+
+$primary-colour: $deep-blue;
