--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -1,10 +1,45 @@
 header {
     @include spacing(padding, top bottom, 1.75rem);
 
+    .container {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+
     .logo {
         display: block;
         width: 100%;
         max-width: 9.25rem;
         max-height: 3.125rem;
+    }
+
+    #menuToggle {
+        display: flex;
+        align-items: center;
+
+        .menuLabel {
+            color: $black;
+            @include set-font(tertiary, semi-bold);
+            font-size: 0.6875rem;
+            line-height: 1.25rem;
+            padding-right: 0.625rem;
+        }
+
+        .menuIcon {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            width: 1.25rem;
+            height: 0.625rem;
+
+            span {
+                display: block;
+                background-color: $primary-colour;
+                width: 100%;
+                height: 0.125rem;
+            }
+        }
     }
 }
