--- a/src/assets/sass/modules/_typography.scss
+++ b/src/assets/sass/modules/_typography.scss
@@ -44,6 +44,11 @@ p {
     margin-bottom: 2.5rem;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 ul {
     list-style-type: none;
 }
