--- a/src/assets/sass/base/_colors.scss
+++ b/src/assets/sass/base/_colors.scss
@@ -15,4 +15,13 @@ $yellow: #FFCD00;
 $sky-blue: #00A3FF;
 $throwback-blue: #3500F5;
 
+/* Form Colours */
+$label-colour: #9B9B9B;
+$legend-colour: #4A4A4A;
+$input-colour: #606060;
+$input-background: #F1F4F5;
+$checkbox-border: #BECBD1;
+$checkbox-container-border: #D0D0D0;
+$error: $red;
+
 $primary-colour: $deep-blue;
