--- a/src/assets/sass/components/_footer.scss
+++ b/src/assets/sass/components/_footer.scss
@@ -23,17 +23,36 @@ footer {
                 flex: 1 1 auto;
                 display: flex;
                 align-items: center;
-                
+
                 .cta-title {
                     @include set-font(primary, medium);
                     font-size: 1.5rem;
                     line-height: 2rem;
                     padding-bottom: 2.25rem;
                 }
-            }
 
-            .footer-legal {
+                .micro-form {
+                    display: flex;
 
+                    input:not([type="submit"]) {
+                        color: $primary-colour;
+                        background-color: $white;
+
+                        &::placeholder {
+                            color: rgba($primary-colour, 0.5);
+                        }
+                    }
+
+                    input[type="submit"] {
+                        @extend %button-reset;
+                        @include set-font(primary, bold);
+                        color: $white;
+                        font-size: $body-font-size;
+                        line-height: 1.5rem;
+                        padding: 0.6875rem 1.125rem;
+                        border: 0.125rem solid $white;
+                    }
+                }
             }
         }
     }
