fixed footer form style

--- a/src/assets/sass/components/_footer.scss
+++ b/src/assets/sass/components/_footer.scss
@@ -35,6 +35,8 @@ footer {
                     display: flex;
 
                     input:not([type="submit"]) {
+                        flex: 1 1 auto;
+                        width: auto;
                         color: $primary-colour;
                         background-color: $white;
 
