--- a/src/assets/sass/base/_colors.scss
+++ b/src/assets/sass/base/_colors.scss
@@ -14,6 +14,7 @@ $orange: #F08432;
 $yellow: #FFCD00;
 $sky-blue: #00A3FF;
 $throwback-blue: #3500F5;
+$gradient-blue: linear-gradient(161.42deg, #018DFF 0%, #01A2FF 60.38%, #011BFF 100%);
 
 /* Form Colours */
 $label-colour: #9B9B9B;
