--- a/src/assets/sass/components/_footer.scss
+++ b/src/assets/sass/components/_footer.scss
@@ -12,7 +12,7 @@ footer {
     .footer-cta {
         flex: 1 1 55%;
         justify-content: center;
-        background: linear-gradient(161.42deg, #018DFF 0%, #01A2FF 60.38%, #011BFF 100%);
+        background: $gradient-blue;
 
         .footer-content {
             display: flex;
