added home use case section

--- a/src/assets/sass/base/_colors.scss
+++ b/src/assets/sass/base/_colors.scss
@@ -25,4 +25,7 @@ $checkbox-border: #BECBD1;
 $checkbox-container-border: #D0D0D0;
 $error: $red;
 
+/* Title Colours */
+$subtitle: #808080;
+
 $primary-colour: $deep-blue;
