--- a/src/assets/sass/modules/_typography.scss
+++ b/src/assets/sass/modules/_typography.scss
@@ -6,19 +6,23 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
-h1 {
+h1, .h1 {
     @include set-font(primary, bold);
     font-size: 3.5rem;
     line-height: 4rem;
 }
 
-h2 {
+h2, .h2 {
     @include set-font(primary, medium);
     font-size: 2.375rem;
     line-height: 3.125rem;
 }
 
-h3, h4, h5, h6 {
+h3,
+h4,
+h5,
+h6,
+.h3 {
     @include set-font(primary, medium);
     font-size: 1.25rem;
     line-height: 1.5;
@@ -36,6 +40,7 @@ p {
 }
 
 .subtitle {
+    color: $subtitle;
     @include set-font(primary, semi-bold);
     font-size: $body-font-size;
     line-height: 1;
