--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -1,4 +1,5 @@
 main.home {
     @import'../components/home/hero';
     @import'../components/home/leadContent';
+    @import'../components/home/useCase';
 }
