--- a/src/assets/sass/utils/_helpers.scss
+++ b/src/assets/sass/utils/_helpers.scss
@@ -23,6 +23,13 @@
     }
 }
 
+.image-container {
+    img {
+        display: block;
+        width: 100%;
+    }
+}
+
 .no-padding {
     padding: 0 !important;
 }
