added home feature section

--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -2,4 +2,5 @@ main.home {
     @import'../components/home/hero';
     @import'../components/home/leadContent';
     @import'../components/home/useCase';
+    @import'../components/home/features';
 }
