--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -1,10 +1,24 @@
 header {
-    @include spacing(padding, top bottom, 1.75rem);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: $header-height;
+    background-color: $white;
+    box-shadow: 0 4px 10px 0 rgba($ocean-blue,0.2);
+    z-index: 10;
+
+    & + main {
+        padding-top: $header-height;
+    }
 
     .container {
+        position: relative;
         display: flex;
         align-items: flex-start;
         justify-content: space-between;
+        @include spacing(padding, top bottom, 1.75rem);
+        z-index: 1;
     }
 
     .logo {
@@ -39,6 +53,40 @@ header {
                 background-color: $primary-colour;
                 width: 100%;
                 height: 0.125rem;
+            }
+        }
+    }
+
+    .navigation {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        padding-top: $header-height;
+        background-color: $white;
+        visibility: hidden;
+        opacity: 0;
+        transition: opacity 0.3s ease, visibility 0.3s ease;
+
+        ul {
+            max-width: 100%;
+
+            @media screen and (min-width: $phone-breakpoint){
+                max-width: calc((#{$phone-container}) / 2);
+                margin-right: auto;
+            }
+
+            @media screen and (min-width: $tablet-breakpoint){
+                max-width: calc((#{$tablet-container}) / 2);
+            }
+
+            @media screen and (min-width: $laptop-breakpoint){
+                max-width: calc((#{$laptop-container}) / 2);
+            }
+
+            @media screen and (min-width: $desktop-breakpoint){
+                max-width: calc((#{$desktop-container}) / 2);
             }
         }
     }
