--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -25,13 +25,32 @@ header {
                 }
             }
         }
+
+        .navigation {
+            visibility: visible;
+            opacity: 1;
+
+            nav {
+                ul, .copyright {
+                    animation: animateIn 0.9s ease forwards;
+                }
+
+                ul:not(.main-navigation) {
+                    animation-delay: 0.2s;
+                }
+
+                .copyright {
+                    animation-delay: 0.4s;
+                }
+            }
+        }
     }
 
     & + main {
         padding-top: $header-height;
     }
 
-    .container {
+    .header-container {
         position: relative;
         display: flex;
         align-items: flex-start;
@@ -92,30 +111,53 @@ header {
         left: 0;
         width: 100%;
         height: 100%;
-        padding-top: $header-height;
         background-color: $white;
         visibility: hidden;
         opacity: 0;
-        transition: opacity 0.3s ease, visibility 0.3s ease;
+        transition: opacity 0.5s ease, visibility 0.5s ease;
 
-        ul {
+        nav {
+            color: $legend-colour;
             max-width: 100%;
+            padding-top: $header-height;
+            padding-bottom: 3.25rem;
 
             @media screen and (min-width: $phone-breakpoint){
-                max-width: calc((#{$phone-container}) / 2);
-                margin-right: auto;
+                max-width: 50%;
+                margin-left: auto;
             }
 
-            @media screen and (min-width: $tablet-breakpoint){
-                max-width: calc((#{$tablet-container}) / 2);
+            ul, .copyright {
+                opacity: 0;
             }
 
-            @media screen and (min-width: $laptop-breakpoint){
-                max-width: calc((#{$laptop-container}) / 2);
+            ul {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                @include spacing(padding, top bottom, 1rem);
+
+                &.main-navigation {
+                    li {
+                        color: $red;
+                        font-size: 3.5rem;
+                        font-weight: 700;
+                        @include spacing(padding, top bottom, 1rem);
+                    }
+                }
+
+                li {
+                    @include spacing(padding, top bottom, 0.75rem);
+
+                    a {
+                        display: block;
+                    }
+                }
             }
 
-            @media screen and (min-width: $desktop-breakpoint){
-                max-width: calc((#{$desktop-container}) / 2);
+            .copyright {
+                @include set-font(tertiary, semi-bold);
+                font-size: 0.75rem;
             }
         }
     }
@@ -124,4 +166,16 @@ header {
 #app.navigationOpen {
     height: 100vh;
     overflow: hidden;
+}
+
+@keyframes animateIn {
+    from {
+        transform: translateY(-2rem);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
