--- a/src/assets/sass/components/_footer.scss
+++ b/src/assets/sass/components/_footer.scss
@@ -12,7 +12,10 @@ footer {
     .footer-cta {
         flex: 1 1 55%;
         justify-content: center;
-        background: $gradient-blue;
+        background-image: url('./assets/images/blue-pattern.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
 
         .footer-content {
             display: flex;
