--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -1,4 +1,9 @@
 main.home {
+    background-image: url('./assets/images/organic-shape.png');
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: top right;
+
     @import'../components/home/hero';
     @import'../components/home/leadContent';
     @import'../components/home/useCase';
