--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -27,8 +27,10 @@
 @import
 'components/header',
 'components/footer',
-'components/simple-cta';
+'components/simple-cta',
+'components/simple-hero';
 
 //Pages
 @import
-'pages/home';
+'pages/home',
+'pages/privacy';
