--- a/src/assets/sass/pages/_faq.scss
+++ b/src/assets/sass/pages/_faq.scss
@@ -3,4 +3,8 @@ main.faq {
 
     @import'../components/faq/accordion-list';
     @import'../components/faq/accordion';
+
+    .simple-hero {
+        padding-top: 0;
+    }
 }
