--- a/src/assets/sass/utils/_helpers.scss
+++ b/src/assets/sass/utils/_helpers.scss
@@ -21,6 +21,10 @@
     @media screen and (min-width: $desktop-breakpoint){
         max-width: calc(#{$desktop-container});
     }
+
+    .container {
+        @include spacing(padding, left right, 0);
+    }
 }
 
 .image-container {
