--- a/src/assets/sass/modules/_typography.scss
+++ b/src/assets/sass/modules/_typography.scss
@@ -49,6 +49,19 @@ p {
     margin-bottom: 2.5rem;
 }
 
+.cta-link {
+    display: flex;
+    align-items: center;
+    color: $legend-colour;
+    font-size: 1rem;
+    line-height: 1;
+
+    &::after {
+        content: ">";
+        padding-left: 0.625rem;
+    }
+}
+
 a {
     color: inherit;
     text-decoration: none;
@@ -61,4 +74,18 @@ ul {
 ol {
     list-style-type: decimal;
     list-style-position: inside;
+}
+
+nav {
+    ul {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        li {
+            a {
+                display: block;
+            }
+        }
+    }
 }
