--- a/src/assets/sass/utils/_mixins.scss
+++ b/src/assets/sass/utils/_mixins.scss
@@ -31,3 +31,13 @@
         }
     }
 }
+
+@mixin invisible{
+    position: absolute;
+    top: -625rem;
+    left: -625rem;
+    font-size: 0;
+    visibility: hidden;
+    width: 0 !important;
+    height: 0 !important;
+}
