--- a/src/assets/sass/components/home/_features.scss
+++ b/src/assets/sass/components/home/_features.scss
@@ -17,7 +17,8 @@
             @include spacing(margin, left right, -0.625rem);
 
             .feature {
-                flex: 1 1 calc(50% - 1.25rem);
+                flex: 0 1 calc(50% - 1.25rem);
+                max-width: calc(50% - 1.25rem);
                 padding: 2.5rem 1.25rem;
                 margin: 0.625rem;
                 border: 1px solid $grey;
