--- a/src/assets/sass/pages/_how-it-works.scss
+++ b/src/assets/sass/pages/_how-it-works.scss
@@ -1,4 +1,5 @@
 main.how-it-works {
     @import'../components/how-it-works/hero';
     @import'../components/how-it-works/partners';
+    @import'../components/how-it-works/what-you-do';
 }
