added origin story section

--- a/src/assets/sass/pages/_our-story.scss
+++ b/src/assets/sass/pages/_our-story.scss
@@ -1,4 +1,5 @@
 main.our-story {
     @import'../components/our-story/hero';
     @import'../components/our-story/fast-facts';
+    @import'../components/our-story/origin-story';
 }
