--- a/src/assets/sass/components/common/_simple-cta.scss
+++ b/src/assets/sass/components/common/_simple-cta.scss
@@ -6,4 +6,17 @@
         color: $red;
         margin-bottom: 1.5rem;
     }
+
+    p {
+        text-align: left;
+        margin-top: 3.5rem;
+        margin-bottom: 4.375rem;
+
+        &.columns {
+            @media screen and (min-width: $tablet-breakpoint){
+                column-count: 2;
+                column-gap: 1.5rem;
+            }
+        }
+    }
 }
