fixed section space

--- a/src/assets/sass/components/our-story/_origin-story.scss
+++ b/src/assets/sass/components/our-story/_origin-story.scss
@@ -1,4 +1,6 @@
 .origin-story {
+    padding-bottom: 5.625rem;
+
     .origin-content {
         @media screen and (min-width: $tablet-breakpoint){
             display: flex;
