--- a/src/assets/sass/components/layout/_header.scss
+++ b/src/assets/sass/components/layout/_header.scss
@@ -4,16 +4,41 @@ header {
     left: 0;
     width: 100%;
     height: $header-height;
+    border-bottom: 1px solid transparent;
     z-index: 10;
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
 
     &.headerFixed {
+        height: auto;
         background-color: $white;
-        box-shadow: 0 4px 10px 0 rgba($ocean-blue,0.2);
+        border-color: $grey;
+
+        .header-container {
+            padding-top: 1.5rem;
+        }
+
+        .header-cta-container {
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        .logo {
+            max-width: 6.25rem;
+            max-height: 2.125rem;
+
+            img {
+                max-width: 6.25rem;
+                max-height: 2.125rem;
+            }
+        }
     }
 
     #app.navigationOpen & {
         #menuToggle {
+            &::before {
+                content: "Close";
+            }
+
             .menuIcon {
                 span {
                     top: 50%;
@@ -60,26 +85,49 @@ header {
 
     .header-container {
         position: relative;
-        display: flex;
-        align-items: flex-start;
-        justify-content: space-between;
         @include spacing(padding, top bottom, 1.75rem);
         z-index: 1;
-        transition: background-color 0.5s ease;
+        transition: background-color 0.5s ease, padding 0.3s ease;
+    }
+
+    .content-container {
+        position: relative;
+    }
+
+    .header-cta-container {
+        position: absolute;
+        top: 0;
+        right: 0;
+        transform: translateY(-25%);
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        transition: top 0.3s ease, transform 0.3s ease;
     }
 
     .logo {
         display: block;
-        width: 100%;
         max-width: 9.25rem;
         max-height: 3.125rem;
+        transition: max-width 0.3s ease, max-height 0.3s ease;
+
+        img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            max-width: 9.25rem;
+            max-height: 3.125rem;
+            transition: max-width 0.3s ease, max-height 0.3s ease;
+        }
     }
 
     #menuToggle {
         display: flex;
         align-items: center;
+        margin-right: 1.75rem;
 
-        .menuLabel {
+        &::before {
+            content: "Menu";
             color: $black;
             @include set-font(tertiary, semi-bold);
             font-size: 0.6875rem;
