--- a/src/assets/sass/modules/_typography.scss
+++ b/src/assets/sass/modules/_typography.scss
@@ -49,22 +49,13 @@ p {
     margin-bottom: 2.5rem;
 }
 
-.cta-link {
-    display: flex;
-    align-items: center;
-    color: $legend-colour;
-    font-size: 1rem;
-    line-height: 1;
-
-    &::after {
-        content: ">";
-        padding-left: 0.625rem;
-    }
-}
-
 a {
     color: inherit;
     text-decoration: none;
+
+    &:hover, &:focus, &:active{
+        outline: none;
+    }
 }
 
 ul {
@@ -86,6 +77,55 @@ nav {
             a {
                 display: block;
             }
+        }
+    }
+}
+
+.line-hover {
+    display: block;
+    position: relative;
+    line-height: 1;
+    overflow: hidden;
+
+    &::before, &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 0.3125rem;
+        background-color: $grey;
+        z-index: -1;
+    }
+
+    &::after {
+        background-color: $yellow;
+        transform: translateX(-100%);
+        transition: transform 0.3s ease;
+    }
+
+    &:hover, &:focus {
+        &::after {
+            transform: translateX(0);
+        }
+    }
+}
+
+.cta-link {
+    display: flex;
+    align-items: center;
+    color: $legend-colour;
+    font-size: 1rem;
+    line-height: 1;
+
+    &::after {
+        content: ">";
+        padding-left: 0.625rem;
+    }
+
+    &.line-hover {
+        span {
+            padding-left: 0.625rem;
         }
     }
 }
