--- a/src/assets/sass/components/home/_hero.scss
+++ b/src/assets/sass/components/home/_hero.scss
@@ -5,9 +5,10 @@
 
         .content-container {
             padding-left: 4.5rem;
+            padding-bottom: 2.25rem;
 
             h1 {
-                margin-bottom: 4rem;
+                margin-bottom: 2.125rem;
 
                 span {
                     display: block;
@@ -25,7 +26,6 @@
             background-size: cover;
             background-position: center;
             height: 15.875rem;
-            margin-top: -1.25rem;
         }
 
         .image-container {
