--- a/src/assets/sass/modules/_buttons.scss
+++ b/src/assets/sass/modules/_buttons.scss
@@ -17,7 +17,7 @@
     border-radius: 1.25rem;
 
     font-size: $body-font-size;
-    line-height: 1.5rem;
+    line-height: $body-line-height;
     text-align: center;
 }
 
