--- a/src/assets/sass/components/layout/_footer.scss
+++ b/src/assets/sass/components/layout/_footer.scss
@@ -53,7 +53,7 @@ footer {
                         @include set-font(primary, bold);
                         color: $white;
                         font-size: $body-font-size;
-                        line-height: 1.5rem;
+                        line-height: $body-line-height;
                         padding: 0.6875rem 1.125rem;
                         border: 0.125rem solid $white;
                     }
