--- a/src/assets/sass/modules/_typography.scss
+++ b/src/assets/sass/modules/_typography.scss
@@ -30,13 +30,13 @@ h6,
 
 p {
     font-size: $body-font-size;
-    line-height: 1.5;
+    line-height: $body-line-height;
 }
 
 .leadText {
     @include set-font(secondary);
-    font-size: 1.5rem;
-    line-height: 1.5;
+    font-size: 1.375rem;
+    line-height: 2.25rem;
 }
 
 .subtitle {
