--- a/src/assets/sass/components/home/_useCase.scss
+++ b/src/assets/sass/components/home/_useCase.scss
@@ -1,43 +1,56 @@
 .use-case {
-    .use-case-content {
+    background-color: $input-background;
+    margin-top: 4.25rem;
+    margin-bottom: 2.25rem;
+
+    .use-case-option {
+        position: relative;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding-bottom: 5.5rem;
+
+        &:first-child {
+            top: -4.25rem;
+            margin-bottom: -6.5rem;
+            align-items: flex-start;
+
+            .content-container {
+                padding-top: 1.625rem;
+            }
+        }
+
+        &:last-child {
+            top: 2.25rem;
+            padding-bottom: 0;
+        }
+
+        .image-container, .content-container {
+            flex: 0 1 28rem;
+            max-width: 28rem;
+        }
 
         .image-container {
-            flex: 1 1 50%;
+            background-image: url('./assets/images/stripe-accent.png');
+            background-repeat: no-repeat;
+            background-size: 6.875rem;
+            background-position: top right;
+            padding-top: 0.75rem;
+            padding-right: 1.125rem;
         }
 
         .content-container {
-            flex: 1 1 50%;
-            padding-left: 5.75rem;
+            padding-left: 5.875rem;
+            padding-bottom: 1.5rem;
 
-            .option-title {
-                position: relative;
-                color: $black;
-                white-space: nowrap;
-                margin-bottom: 2.5rem;
+            h2 {
+                margin-bottom: 3.75rem;
+            }
 
-                .overlap {
-                    display: block;
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    transform: translateX(-100%);
-                    padding-right: 0.875rem;
-                }
-
-                button {
-                    color: inherit;
-                    font-size: inherit;
-                    font-weight: inherit;
-                    line-height: inherit;
-                    border-bottom: 0.1875rem solid $yellow;
-
-                    & + span {
-                        padding-left: 0.875rem;
-                    }
-                }
+            h3 {
+                font-size: 1.5rem;
+                line-height: 2rem;
+                margin-bottom: 2rem;
             }
         }
     }
